
* A bug in process.data was fixed that would incorrectly state that the robust structure was not correct in some cases with non-unit time intervals.  Thanks to Tomo Eguchi for finding and reporting this error.

RMark 2.1.12 (12 Mar 2015)
--------------------------
BUG FIXES
* Changed names of inp files to be all lower case to avoid problems on non-windows machines

* Incomplete reading of derived parameters has been fixed.  Models that have parameter f0 now have a derived parameter for N. 

CHANGES 
* added code to release.gof and mark.wrapper.parallel to return NULL if run on a non-windows machine

RMark 2.1.11 (10 Mar 2015)
--------------------------
BUG FIXES
* Fixed bad url in description

CHANGES 
* set threads=1 for any example that is tested on CRAN.

RMark 2.1.10 (10 Mar 2015)
--------------------------
NEW FEATURES
* added argument icvalues to mark and make.mark.model so individual covariate values can be specified in inp file for mark.exe to calculate real parameter values. Most useful in combination with setting of profile likelihood intervals.

CHANGES 
* code was added to popan.derived to provide cumulative summation of B_Gross over time for each occasion and its v-c matrix. The last occasion for each group is NGross for that group.
* extract.mark.output, mark, run.mark.model, mark.wrapper, and mark.wrapper.parallel were modified so that all messages are suppressed when silent=TRUE and if there was an error with the MARK run it does not pop open editor with the output file.
* strata.labels are checked to make sure that they are all single characters
* added explicit test to make sure file exists in import.chdata and convert.inp
* added checks to make.mark.model. If design data rows have been deleted a warning is given with directions to read the message in make.design.data. Also, the code checks to make sure the rows are in their proper order. If they are, the code stops.

BUG FIXES